Feat:Adição das atividades de escopo
